implementation/testdata/typechecker/error/classes/portfolio_test11.java
//Type Error: boolean a shadows int a and printInt expects an integer
int main(){
        return 0;
        }

class A{
    int a;
    int func(){
        boolean a;
        printInt(a);
        return 0;
    }
}